fixed #62 'jumping forms'

--- a/resources/css/layout.less
+++ b/resources/css/layout.less
@@ -296,6 +296,7 @@ html, body {
   height: 24px;
   padding: 2px;
   width: 24px;
+  color:transparent !important;
 }
 
 .t-edit{
